[fix] overflow only on Y axe index.css line 14

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html,
 body {
     position: relative;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
